[package]
name = "max3010x"
version = "0.1.0"
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/max3010x-rs"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the MAX3010x high-sensitivity pulse oximeter and heart-rate sensor for wearable health."
readme = "README.md"
keywords = ["heart", "oximeter", "health", "driver", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/max3010x-rs"
documentation = "https://docs.rs/max3010x"
include = [
    "**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]

[badges]
travis-ci = { repository = "eldruin/max3010x-rs", branch = "master" }
coveralls = { repository = "eldruin/max3010x-rs", branch = "master", service = "github" }
maintenance = { status = "actively-developed" }

[dependencies]
embedded-hal = "0.2"
nb = "0.1"

[dev-dependencies]
linux-embedded-hal = "0.2"
embedded-hal-mock = "0.4"

[profile.release]
lto = true
