[package]
name = "max3010x"
edition = "2021"
version = "0.2.0"
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/max3010x-rs"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the MAX3010x high-sensitivity pulse oximeter and heart-rate sensor for wearable health."
readme = "README.md"
keywords = ["heart", "oximeter", "health", "driver", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/max3010x-rs"
documentation = "https://docs.rs/max3010x"

[dependencies]
embedded-hal = "1.0.0"
nb = "1"

[dev-dependencies]
linux-embedded-hal = "0.4"
embedded-hal-mock = "0.11.1"

[profile.release]
lto = true
